# diffs

./: LICENSE  MANIFEST.in  Makefile  README.md  differ.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
diffs/: __init__.py  __main__.py  diffs.py  main.py  version.py
