[project]
name = "diffs"
version = "0.2.0"  # also in diffs/version.py
description = "Changes monitor for shell command outputs"
license = {text = "MIT"}
authors = [
    { name = "igrek51", email = "igrek51.dev@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/igrek51/diffs"


[build-system]
requires = ["setuptools", "build", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["diffs"]
include-package-data = true


[project.scripts]
diffs = "diffs.main:main"
